--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,20 @@
+This is my daily autoexec file. Suggestions are welocome!
+
+
+//Unbind the current voice key 'k'
+unbind k
+
+//Changed Voice talk key from 'k' to 't'
+bind t "+voicerecord"
+
+//Bind the 'k' to say custom message in all chat
+bind k "say ggwp!!"
+
+
 //Net Graph binded to TAB key which when pressed will show Scoreboard with Net Graph Combined
+//Net Graph shows FPS, Ping, Losses, choke etc values
 net_graph "1"
-net_graphheight "9999"
+net_graphheight "9999" 
 bind "TAB" "+scorenet"
 alias "+scorenet" "+showscores; net_graphheight 0"
 alias "-scorenet" "-showscores; net_graphheight 9999"
