--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,4 +1,6 @@
-This is my daily autoexec file. Suggestions are welocome!
+//by skad00sh //Find me on XDA
+
+//This is my daily autoexec file. Suggestions are welocome!
 
 
 //Unbind the current voice key 'k'
