--- a/practice.cfg
+++ b/practice.cfg
@@ -14,3 +14,19 @@ mp_buytime "1000"
 bot_kick
 sv_infinite_ammo "1"
 mp_warmup_end
+
+
+//To fly arround and go anywhere without walking
+noclip
+//Change any key for no clip. I am using 'c'
+bind c "noclip"
+
+//To show impacts of bullets
+mp_showimpacts "1"
+
+//To show grenade trajectory trails
+sv_grenade_trajectory "1"
+
+
+//Done?
+sv_restart "1"
